# fraud-detection-pipeline

./: .env.example  README.md  docker-compose.yml  pyproject.toml
feature_store/: redis_client.py
feedback/: label_collector.py  retrain_job.py  retrain_trigger.py
infra/: bigquery_admin.py  kafka_admin.py
pipeline/: main.py  test_consumer.py  transforms.py
producer/: generator.py  main.py  models.py
schemas/: transaction_authorisation.avsc
scorer/: main.py  model.py  router.py  rules.py  train.py
scorer/model_artifacts/: fraud_model.pkl  model_metadata.json
sinks/: alerts_publisher.py  bigquery_sink.py
