[project]
name = "fraud-detection-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "avro-python3>=1.10.2",
    "faker>=40.15.0",
    "kafka-python-ng>=2.2.3",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "ulid-py>=1.1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]
